# osu

./: .clang-format  CMakeLists.txt  README.md
cmake/: CompilerFlags.cmake
devirt/: CMakeLists.txt  miasm_deobfuscate.py  ptrace_tracer.cpp  vm_lifter.py
src/: CMakeLists.txt  preload.cpp
src/ac/: adapter_monitor.cpp  adapter_monitor.hpp  crypto_hooks.cpp  crypto_hooks.hpp  export_interceptor.cpp  export_interceptor.hpp  module_tracker.cpp  module_tracker.hpp  offsets.hpp  semantics.hpp  vm_tracer.cpp  vm_tracer.hpp  vtable_patcher.cpp  vtable_patcher.hpp
src/core/: config.cpp  config.hpp  event.hpp  json.hpp  logger.cpp  logger.hpp
src/hooks/: hook_registry.cpp  hook_registry.hpp  libc_hooks.cpp  libc_hooks.hpp
src/platform/linux/: memory.cpp  memory.hpp  resolver.cpp  resolver.hpp
src/util/: time.hpp
